Bug fix:  .tn-prototype hover overlay was overflowing image

--- a/source/_less/patternfly-site.less
+++ b/source/_less/patternfly-site.less
@@ -944,7 +944,7 @@ th {
     background: rgba(255,255,255,.4);
   }
   a {
-    display: block;
+    display: inline-block;
     position: relative;
     &:hover {
       &:after {
